Done complete with credits

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #main {
   padding: 12px;
-  height: 90vh;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   flex-flow: column;
@@ -11,4 +11,8 @@
     margin-right: 20%;
     margin-left: 10%;
   }
+}
+
+a {
+  text-decoration: none;
 }
